cmake_minimum_required(VERSION 3.16)
project(SmartDongLib)

set(CMAKE_CXX_STANDARD 14)
include_directories(.)
include_directories(entry)
include_directories(ql)
include_directories(ql/experimental)
include_directories(ql/experimental/math)
include_directories(ql/math)
include_directories(ql/math/copulas)
include_directories(ql/math/distributions)
include_directories(ql/math/integrals)
include_directories(ql/math/interpolations)
include_directories(ql/math/matrixutilities)
include_directories(ql/math/ode)
include_directories(ql/math/optimization)
include_directories(ql/math/randomnumbers)
include_directories(ql/math/solvers1d)
include_directories(ql/math/statistics)
include_directories(ql/methods)
include_directories(ql/methods/finitedifferences)
include_directories(ql/methods/finitedifferences/meshers)
include_directories(ql/methods/finitedifferences/operators)
include_directories(ql/methods/finitedifferences/schemes)
include_directories(ql/methods/finitedifferences/solvers)
include_directories(ql/methods/finitedifferences/stepconditions)
include_directories(ql/methods/finitedifferences/utilities)
include_directories(ql/methods/lattices)
include_directories(ql/methods/montecarlo)
include_directories(ql/patterns)
include_directories(ql/time)
include_directories(ql/time/calendars)
include_directories(ql/time/daycounters)
include_directories(ql/utilities)
include_directories(sdalgorithm)
include_directories(sdalgorithm/math)
include_directories(sdalgorithm/util)
include_directories(sdstructure)
include_directories(sdstructure/graph)
include_directories(sdstructure/linearlist)
include_directories(sdstructure/tree)

add_executable(SmartDongLib
#    entry/arrayEntry.cpp
#    entry/AVLEntry.cpp
#    entry/BinaryTreeEntry.cpp
#    entry/BSTEntry.cpp
#    entry/circularLinklistEntry.cpp
#    entry/constructEntry.cpp
#    entry/generalListEntry.cpp
#    entry/graphEntry.cpp
#    entry/graphMiniSpanTreeEntry.cpp
#    entry/haffmanEntry.cpp
#    entry/linklistEntry.cpp
#    entry/MatrixEntry.cpp
#    entry/PriorityQueueEntry.cpp
#    entry/redblackEntry.cpp
#    entry/SkipListEntry.cpp
#    entry/sortEntry.cpp
#    entry/STLEntry.cpp
#    entry/stringEntry.cpp
#    entry/treeConvertEntry.cpp
#    entry/tripleMatrix.cpp
    ql/methods/finitedifferences/tridiagonaloperator.cpp
    ql/methods/finitedifferences/tridiagonaloperator.hpp
    ql/experimental/math/all.hpp
    ql/experimental/math/claytoncopularng.hpp
    ql/experimental/math/convolvedstudentt.cpp
    ql/experimental/math/convolvedstudentt.hpp
    ql/experimental/math/expm.cpp
    ql/experimental/math/expm.hpp
    ql/experimental/math/farliegumbelmorgensterncopularng.hpp
    ql/experimental/math/fireflyalgorithm.cpp
    ql/experimental/math/fireflyalgorithm.hpp
    ql/experimental/math/frankcopularng.hpp
    ql/experimental/math/gaussiancopulapolicy.cpp
    ql/experimental/math/gaussiancopulapolicy.hpp
    ql/experimental/math/gaussiannoncentralchisquaredpolynomial.cpp
    ql/experimental/math/gaussiannoncentralchisquaredpolynomial.hpp
    ql/experimental/math/hybridsimulatedannealing.hpp
    ql/experimental/math/hybridsimulatedannealingfunctors.hpp
    ql/experimental/math/isotropicrandomwalk.hpp
    ql/experimental/math/laplaceinterpolation.hpp
    ql/experimental/math/latentmodel.hpp
    ql/experimental/math/levyflightdistribution.hpp
    ql/experimental/math/moorepenroseinverse.hpp
    ql/experimental/math/multidimintegrator.cpp
    ql/experimental/math/multidimintegrator.hpp
    ql/experimental/math/multidimquadrature.cpp
    ql/experimental/math/multidimquadrature.hpp
    ql/experimental/math/particleswarmoptimization.cpp
    ql/experimental/math/particleswarmoptimization.hpp
    ql/experimental/math/piecewisefunction.hpp
    ql/experimental/math/piecewiseintegral.cpp
    ql/experimental/math/piecewiseintegral.hpp
    ql/experimental/math/polarstudenttrng.hpp
    ql/experimental/math/tcopulapolicy.cpp
    ql/experimental/math/tcopulapolicy.hpp
    ql/experimental/math/zigguratrng.cpp
    ql/experimental/math/zigguratrng.hpp
    ql/experimental/all.hpp
    ql/indexes/indexmanager.cpp
    ql/indexes/indexmanager.hpp
    ql/math/copulas/alimikhailhaqcopula.cpp
    ql/math/copulas/alimikhailhaqcopula.hpp
    ql/math/copulas/all.hpp
    ql/math/copulas/claytoncopula.cpp
    ql/math/copulas/claytoncopula.hpp
    ql/math/copulas/farliegumbelmorgensterncopula.cpp
    ql/math/copulas/farliegumbelmorgensterncopula.hpp
    ql/math/copulas/frankcopula.cpp
    ql/math/copulas/frankcopula.hpp
    ql/math/copulas/galamboscopula.cpp
    ql/math/copulas/galamboscopula.hpp
    ql/math/copulas/gaussiancopula.cpp
    ql/math/copulas/gaussiancopula.hpp
    ql/math/copulas/gumbelcopula.cpp
    ql/math/copulas/gumbelcopula.hpp
    ql/math/copulas/huslerreisscopula.cpp
    ql/math/copulas/huslerreisscopula.hpp
    ql/math/copulas/independentcopula.cpp
    ql/math/copulas/independentcopula.hpp
    ql/math/copulas/marshallolkincopula.cpp
    ql/math/copulas/marshallolkincopula.hpp
    ql/math/copulas/maxcopula.cpp
    ql/math/copulas/maxcopula.hpp
    ql/math/copulas/mincopula.cpp
    ql/math/copulas/mincopula.hpp
    ql/math/copulas/plackettcopula.cpp
    ql/math/copulas/plackettcopula.hpp
    ql/math/distributions/all.hpp
    ql/math/distributions/binomialdistribution.hpp
    ql/math/distributions/bivariatenormaldistribution.cpp
    ql/math/distributions/bivariatenormaldistribution.hpp
    ql/math/distributions/bivariatestudenttdistribution.cpp
    ql/math/distributions/bivariatestudenttdistribution.hpp
    ql/math/distributions/chisquaredistribution.cpp
    ql/math/distributions/chisquaredistribution.hpp
    ql/math/distributions/gammadistribution.cpp
    ql/math/distributions/gammadistribution.hpp
    ql/math/distributions/normaldistribution.cpp
    ql/math/distributions/normaldistribution.hpp
    ql/math/distributions/poissondistribution.hpp
    ql/math/distributions/studenttdistribution.cpp
    ql/math/distributions/studenttdistribution.hpp
    ql/math/integrals/all.hpp
    ql/math/integrals/discreteintegrals.cpp
    ql/math/integrals/discreteintegrals.hpp
    ql/math/integrals/exponentialintegrals.cpp
    ql/math/integrals/exponentialintegrals.hpp
    ql/math/integrals/filonintegral.cpp
    ql/math/integrals/filonintegral.hpp
    ql/math/integrals/gaussianorthogonalpolynomial.cpp
    ql/math/integrals/gaussianorthogonalpolynomial.hpp
    ql/math/integrals/gaussianquadratures.cpp
    ql/math/integrals/gaussianquadratures.hpp
    ql/math/integrals/gausslaguerrecosinepolynomial.hpp
    ql/math/integrals/gausslobattointegral.cpp
    ql/math/integrals/gausslobattointegral.hpp
    ql/math/integrals/integral.cpp
    ql/math/integrals/integral.hpp
    ql/math/integrals/kronrodintegral.cpp
    ql/math/integrals/kronrodintegral.hpp
    ql/math/integrals/momentbasedgaussianpolynomial.hpp
    ql/math/integrals/segmentintegral.cpp
    ql/math/integrals/segmentintegral.hpp
    ql/math/integrals/simpsonintegral.hpp
    ql/math/integrals/trapezoidintegral.hpp
    ql/math/integrals/twodimensionalintegral.hpp
    ql/math/interpolations/abcdinterpolation.hpp
    ql/math/interpolations/all.hpp
    ql/math/interpolations/backwardflatinterpolation.hpp
    ql/math/interpolations/backwardflatlinearinterpolation.hpp
    ql/math/interpolations/bicubicsplineinterpolation.hpp
    ql/math/interpolations/bilinearinterpolation.hpp
    ql/math/interpolations/convexmonotoneinterpolation.hpp
    ql/math/interpolations/cubicinterpolation.hpp
    ql/math/interpolations/extrapolation.hpp
    ql/math/interpolations/flatextrapolation2d.hpp
    ql/math/interpolations/forwardflatinterpolation.hpp
    ql/math/interpolations/interpolation2d.hpp
    ql/math/interpolations/kernelinterpolation.hpp
    ql/math/interpolations/kernelinterpolation2d.hpp
    ql/math/interpolations/lagrangeinterpolation.hpp
    ql/math/interpolations/linearinterpolation.hpp
    ql/math/interpolations/loginterpolation.hpp
    ql/math/interpolations/mixedinterpolation.hpp
    ql/math/interpolations/multicubicspline.hpp
    ql/math/interpolations/sabrinterpolation.hpp
    ql/math/interpolations/xabrinterpolation.hpp
    ql/math/matrixutilities/all.hpp
    ql/math/matrixutilities/basisincompleteordered.cpp
    ql/math/matrixutilities/basisincompleteordered.hpp
    ql/math/matrixutilities/bicgstab.cpp
    ql/math/matrixutilities/bicgstab.hpp
    ql/math/matrixutilities/choleskydecomposition.cpp
    ql/math/matrixutilities/choleskydecomposition.hpp
    ql/math/matrixutilities/factorreduction.cpp
    ql/math/matrixutilities/factorreduction.hpp
    ql/math/matrixutilities/getcovariance.cpp
    ql/math/matrixutilities/getcovariance.hpp
    ql/math/matrixutilities/gmres.cpp
    ql/math/matrixutilities/gmres.hpp
    ql/math/matrixutilities/pseudosqrt.cpp
    ql/math/matrixutilities/pseudosqrt.hpp
    ql/math/matrixutilities/qrdecomposition.cpp
    ql/math/matrixutilities/qrdecomposition.hpp
    ql/math/matrixutilities/sparseilupreconditioner.cpp
    ql/math/matrixutilities/sparseilupreconditioner.hpp
    ql/math/matrixutilities/sparsematrix.hpp
    ql/math/matrixutilities/svd.cpp
    ql/math/matrixutilities/svd.hpp
    ql/math/matrixutilities/symmetricschurdecomposition.cpp
    ql/math/matrixutilities/symmetricschurdecomposition.hpp
    ql/math/matrixutilities/tapcorrelations.cpp
    ql/math/matrixutilities/tapcorrelations.hpp
    ql/math/matrixutilities/tqreigendecomposition.cpp
    ql/math/matrixutilities/tqreigendecomposition.hpp
    ql/math/ode/adaptiverungekutta.hpp
    ql/math/ode/all.hpp
    ql/math/optimization/all.hpp
    ql/math/optimization/armijo.cpp
    ql/math/optimization/armijo.hpp
    ql/math/optimization/bfgs.cpp
    ql/math/optimization/bfgs.hpp
    ql/math/optimization/conjugategradient.cpp
    ql/math/optimization/conjugategradient.hpp
    ql/math/optimization/constraint.cpp
    ql/math/optimization/constraint.hpp
    ql/math/optimization/costfunction.hpp
    ql/math/optimization/differentialevolution.cpp
    ql/math/optimization/differentialevolution.hpp
    ql/math/optimization/endcriteria.cpp
    ql/math/optimization/endcriteria.hpp
    ql/math/optimization/goldstein.cpp
    ql/math/optimization/goldstein.hpp
    ql/math/optimization/leastsquare.cpp
    ql/math/optimization/leastsquare.hpp
    ql/math/optimization/levenbergmarquardt.cpp
    ql/math/optimization/levenbergmarquardt.hpp
    ql/math/optimization/linesearch.cpp
    ql/math/optimization/linesearch.hpp
    ql/math/optimization/linesearchbasedmethod.cpp
    ql/math/optimization/linesearchbasedmethod.hpp
    ql/math/optimization/lmdif.cpp
    ql/math/optimization/lmdif.hpp
    ql/math/optimization/method.hpp
    ql/math/optimization/problem.hpp
    ql/math/optimization/projectedconstraint.hpp
    ql/math/optimization/projectedcostfunction.cpp
    ql/math/optimization/projectedcostfunction.hpp
    ql/math/optimization/projection.cpp
    ql/math/optimization/projection.hpp
    ql/math/optimization/simplex.cpp
    ql/math/optimization/simplex.hpp
    ql/math/optimization/simulatedannealing.hpp
    ql/math/optimization/spherecylinder.cpp
    ql/math/optimization/spherecylinder.hpp
    ql/math/optimization/steepestdescent.cpp
    ql/math/optimization/steepestdescent.hpp
    ql/math/randomnumbers/all.hpp
    ql/math/randomnumbers/boxmullergaussianrng.hpp
    ql/math/randomnumbers/centrallimitgaussianrng.hpp
    ql/math/randomnumbers/faurersg.cpp
    ql/math/randomnumbers/faurersg.hpp
    ql/math/randomnumbers/haltonrsg.cpp
    ql/math/randomnumbers/haltonrsg.hpp
    ql/math/randomnumbers/inversecumulativerng.hpp
    ql/math/randomnumbers/inversecumulativersg.hpp
    ql/math/randomnumbers/knuthuniformrng.cpp
    ql/math/randomnumbers/knuthuniformrng.hpp
    ql/math/randomnumbers/latticersg.cpp
    ql/math/randomnumbers/latticersg.hpp
    ql/math/randomnumbers/latticerules.cpp
    ql/math/randomnumbers/latticerules.hpp
    ql/math/randomnumbers/lecuyeruniformrng.cpp
    ql/math/randomnumbers/lecuyeruniformrng.hpp
    ql/math/randomnumbers/mt19937uniformrng.cpp
    ql/math/randomnumbers/mt19937uniformrng.hpp
    ql/math/randomnumbers/primitivepolynomials.cpp
    ql/math/randomnumbers/primitivepolynomials.hpp
    ql/math/randomnumbers/randomizedlds.hpp
    ql/math/randomnumbers/randomsequencegenerator.hpp
    ql/math/randomnumbers/ranluxuniformrng.hpp
    ql/math/randomnumbers/rngtraits.hpp
    ql/math/randomnumbers/seedgenerator.cpp
    ql/math/randomnumbers/seedgenerator.hpp
        ql/math/randomnumbers/sobolrsg.cpp
    ql/math/randomnumbers/sobolrsg.hpp
    ql/math/randomnumbers/stochasticcollocationinvcdf.cpp
    ql/math/randomnumbers/stochasticcollocationinvcdf.hpp
    ql/math/solvers1d/all.hpp
    ql/math/solvers1d/bisection.hpp
    ql/math/solvers1d/brent.hpp
    ql/math/solvers1d/falseposition.hpp
    ql/math/solvers1d/finitedifferencenewtonsafe.hpp
    ql/math/solvers1d/newton.hpp
    ql/math/solvers1d/newtonsafe.hpp
    ql/math/solvers1d/ridder.hpp
    ql/math/solvers1d/secant.hpp
    ql/math/statistics/all.hpp
    ql/math/statistics/convergencestatistics.hpp
    ql/math/statistics/discrepancystatistics.cpp
    ql/math/statistics/discrepancystatistics.hpp
    ql/math/statistics/gaussianstatistics.hpp
    ql/math/statistics/generalstatistics.cpp
    ql/math/statistics/generalstatistics.hpp
    ql/math/statistics/histogram.cpp
    ql/math/statistics/histogram.hpp
    ql/math/statistics/incrementalstatistics.cpp
    ql/math/statistics/incrementalstatistics.hpp
    ql/math/statistics/riskstatistics.hpp
    ql/math/statistics/sequencestatistics.hpp
    ql/math/statistics/statistics.hpp
    ql/math/abcdmathfunction.cpp
    ql/math/abcdmathfunction.hpp
    ql/math/all.hpp
    ql/math/array.hpp
    ql/math/autocovariance.hpp
    ql/math/bernsteinpolynomial.cpp
    ql/math/bernsteinpolynomial.hpp
    ql/math/beta.cpp
    ql/math/beta.hpp
    ql/math/bspline.cpp
    ql/math/bspline.hpp
    ql/math/comparison.hpp
    ql/math/curve.hpp
    ql/math/errorfunction.cpp
    ql/math/errorfunction.hpp
    ql/math/factorial.cpp
    ql/math/factorial.hpp
    ql/math/fastfouriertransform.hpp
    ql/math/functional.hpp
    ql/math/generallinearleastsquares.hpp
    ql/math/incompletegamma.cpp
    ql/math/incompletegamma.hpp
    ql/math/initializers.hpp
    ql/math/interpolation.hpp
    ql/math/kernelfunctions.hpp
    ql/math/lexicographicalview.hpp
    ql/math/linearleastsquaresregression.hpp
    ql/math/matrix.cpp
    ql/math/matrix.hpp
    ql/math/modifiedbessel.cpp
    ql/math/modifiedbessel.hpp
    ql/math/pascaltriangle.cpp
    ql/math/pascaltriangle.hpp
    ql/math/polynomialmathfunction.cpp
    ql/math/polynomialmathfunction.hpp
    ql/math/primenumbers.cpp
    ql/math/primenumbers.hpp
    ql/math/quadratic.cpp
    ql/math/quadratic.hpp
    ql/math/richardsonextrapolation.cpp
    ql/math/richardsonextrapolation.hpp
    ql/math/rounding.cpp
    ql/math/rounding.hpp
    ql/math/sampledcurve.cpp
    ql/math/sampledcurve.hpp
    ql/math/solver1d.hpp
    ql/math/transformedgrid.hpp
    ql/patterns/all.hpp
    ql/patterns/composite.hpp
    ql/patterns/curiouslyrecurring.hpp
    ql/patterns/lazyobject.hpp
    ql/patterns/observable.cpp
    ql/patterns/observable.hpp
    ql/patterns/singleton.hpp
    ql/patterns/visitor.hpp
    ql/time/calendars/all.hpp
    ql/time/calendars/argentina.cpp
    ql/time/calendars/argentina.hpp
    ql/time/calendars/australia.cpp
    ql/time/calendars/australia.hpp
    ql/time/calendars/austria.cpp
    ql/time/calendars/austria.hpp
    ql/time/calendars/bespokecalendar.cpp
    ql/time/calendars/bespokecalendar.hpp
    ql/time/calendars/botswana.cpp
    ql/time/calendars/botswana.hpp
    ql/time/calendars/brazil.cpp
    ql/time/calendars/brazil.hpp
    ql/time/calendars/canada.cpp
    ql/time/calendars/canada.hpp
    ql/time/calendars/chile.cpp
    ql/time/calendars/chile.hpp
    ql/time/calendars/china.cpp
    ql/time/calendars/china.hpp
    ql/time/calendars/czechrepublic.cpp
    ql/time/calendars/czechrepublic.hpp
    ql/time/calendars/denmark.cpp
    ql/time/calendars/denmark.hpp
    ql/time/calendars/finland.cpp
    ql/time/calendars/finland.hpp
    ql/time/calendars/france.cpp
    ql/time/calendars/france.hpp
    ql/time/calendars/germany.cpp
    ql/time/calendars/germany.hpp
    ql/time/calendars/hongkong.cpp
    ql/time/calendars/hongkong.hpp
    ql/time/calendars/hungary.cpp
    ql/time/calendars/hungary.hpp
    ql/time/calendars/iceland.cpp
    ql/time/calendars/iceland.hpp
    ql/time/calendars/india.cpp
    ql/time/calendars/india.hpp
    ql/time/calendars/indonesia.cpp
    ql/time/calendars/indonesia.hpp
    ql/time/calendars/israel.cpp
    ql/time/calendars/israel.hpp
    ql/time/calendars/italy.cpp
    ql/time/calendars/italy.hpp
    ql/time/calendars/japan.cpp
    ql/time/calendars/japan.hpp
    ql/time/calendars/jointcalendar.cpp
    ql/time/calendars/jointcalendar.hpp
    ql/time/calendars/mexico.cpp
    ql/time/calendars/mexico.hpp
    ql/time/calendars/newzealand.cpp
    ql/time/calendars/newzealand.hpp
    ql/time/calendars/norway.cpp
    ql/time/calendars/norway.hpp
    ql/time/calendars/nullcalendar.hpp
    ql/time/calendars/poland.cpp
    ql/time/calendars/poland.hpp
    ql/time/calendars/romania.cpp
    ql/time/calendars/romania.hpp
    ql/time/calendars/russia.cpp
    ql/time/calendars/russia.hpp
    ql/time/calendars/saudiarabia.cpp
    ql/time/calendars/saudiarabia.hpp
    ql/time/calendars/singapore.cpp
    ql/time/calendars/singapore.hpp
    ql/time/calendars/slovakia.cpp
    ql/time/calendars/slovakia.hpp
    ql/time/calendars/southafrica.cpp
    ql/time/calendars/southafrica.hpp
    ql/time/calendars/southkorea.cpp
    ql/time/calendars/southkorea.hpp
    ql/time/calendars/sweden.cpp
    ql/time/calendars/sweden.hpp
    ql/time/calendars/switzerland.cpp
    ql/time/calendars/switzerland.hpp
    ql/time/calendars/taiwan.cpp
    ql/time/calendars/taiwan.hpp
    ql/time/calendars/target.cpp
    ql/time/calendars/target.hpp
    ql/time/calendars/thailand.cpp
    ql/time/calendars/thailand.hpp
    ql/time/calendars/turkey.cpp
    ql/time/calendars/turkey.hpp
    ql/time/calendars/ukraine.cpp
    ql/time/calendars/ukraine.hpp
    ql/time/calendars/unitedkingdom.cpp
    ql/time/calendars/unitedkingdom.hpp
    ql/time/calendars/unitedstates.cpp
    ql/time/calendars/unitedstates.hpp
    ql/time/calendars/weekendsonly.cpp
    ql/time/calendars/weekendsonly.hpp
    ql/time/daycounters/actual360.hpp
    ql/time/daycounters/actual364.hpp
    ql/time/daycounters/actual365fixed.cpp
    ql/time/daycounters/actual365fixed.hpp
    ql/time/daycounters/actualactual.cpp
    ql/time/daycounters/actualactual.hpp
    ql/time/daycounters/all.hpp
    ql/time/daycounters/business252.cpp
    ql/time/daycounters/business252.hpp
    ql/time/daycounters/one.hpp
    ql/time/daycounters/simpledaycounter.cpp
    ql/time/daycounters/simpledaycounter.hpp
    ql/time/daycounters/thirty360.cpp
    ql/time/daycounters/thirty360.hpp
    ql/time/daycounters/thirty365.cpp
    ql/time/daycounters/thirty365.hpp
    ql/time/all.hpp
    ql/time/asx.cpp
    ql/time/asx.hpp
    ql/time/businessdayconvention.cpp
    ql/time/businessdayconvention.hpp
    ql/time/calendar.cpp
    ql/time/calendar.hpp
    ql/time/date.cpp
    ql/time/date.hpp
    ql/time/dategenerationrule.cpp
    ql/time/dategenerationrule.hpp
    ql/time/daycounter.hpp
    ql/time/ecb.cpp
    ql/time/ecb.hpp
    ql/time/frequency.cpp
    ql/time/frequency.hpp
    ql/time/imm.cpp
    ql/time/imm.hpp
    ql/time/period.cpp
    ql/time/period.hpp
    ql/time/schedule.cpp
    ql/time/schedule.hpp
    ql/time/timeunit.cpp
    ql/time/timeunit.hpp
    ql/time/weekday.cpp
    ql/time/weekday.hpp
    ql/utilities/all.hpp
    ql/utilities/clone.hpp
    ql/utilities/dataformatters.cpp
    ql/utilities/dataformatters.hpp
    ql/utilities/dataparsers.cpp
    ql/utilities/dataparsers.hpp
    ql/utilities/disposable.hpp
    ql/utilities/null.hpp
    ql/utilities/null_deleter.hpp
    ql/utilities/observablevalue.hpp
    ql/utilities/steppingiterator.hpp
    ql/utilities/tracing.cpp
    ql/utilities/tracing.hpp
    ql/utilities/vectors.hpp
    ql/auto_link.hpp
    ql/auto_ptr.hpp
        ql/compounding.hpp
    ql/config.ansi.hpp
    ql/config.mingw.hpp
    ql/config.msvc.hpp
    ql/config.sun.hpp
        ql/default.hpp
    ql/discretizedasset.cpp
    ql/discretizedasset.hpp
    ql/errors.cpp
    ql/errors.hpp
    ql/event.cpp
    ql/event.hpp
        ql/exercise.cpp
    ql/exercise.hpp
    ql/functional.hpp
    ql/grid.hpp
    ql/handle.hpp
    ql/index.cpp
    ql/index.hpp
    ql/instrument.hpp
    ql/interestrate.cpp
    ql/interestrate.hpp
    ql/mathconstants.hpp
    ql/numericalmethod.hpp
    ql/option.hpp
    ql/payoff.hpp
    ql/position.cpp
    ql/position.hpp
    ql/prices.cpp
    ql/prices.hpp
    ql/pricingengine.hpp
    ql/qldefines.hpp
    ql/quantlib.hpp
    ql/quote.hpp
    ql/rebatedexercise.cpp
    ql/rebatedexercise.hpp
    ql/settings.cpp
    ql/settings.hpp
    ql/shared_ptr.hpp
    ql/stochasticprocess.cpp
    ql/stochasticprocess.hpp
    ql/termstructure.cpp
    ql/termstructure.hpp
    ql/timegrid.cpp
    ql/timegrid.hpp
    ql/timeseries.hpp
    ql/tuple.hpp
    ql/types.hpp
    ql/userconfig.hpp
    ql/version.cpp
    ql/version.hpp
    ql/volatilitymodel.hpp
    sdalgorithm/math/independentalgorithm.h
    sdalgorithm/util/sort.h
    sdstructure/graph/graph.cpp
    sdstructure/graph/graph.h
    sdstructure/graph/graphadjacencyedge.h
    sdstructure/graph/graphadjacencylist.cpp
    sdstructure/graph/graphadjacencylist.h
    sdstructure/linearlist/Array.cpp
    sdstructure/linearlist/Array.h
    sdstructure/linearlist/circularLinkedlist.cpp
    sdstructure/linearlist/circularLinkedlist.h
    sdstructure/linearlist/generalList.cpp
    sdstructure/linearlist/generalList.h
    sdstructure/linearlist/linkList.cpp
    sdstructure/linearlist/linkList.h
    sdstructure/linearlist/Matrix.cpp
    sdstructure/linearlist/Matrix.h
    sdstructure/linearlist/priorityqueue.cpp
    sdstructure/linearlist/priorityqueue.h
    sdstructure/linearlist/SkipList.cpp
    sdstructure/linearlist/SkipList.h
    sdstructure/linearlist/SString.cpp
    sdstructure/linearlist/SString.h
    sdstructure/linearlist/tsMatrix.cpp
    sdstructure/linearlist/tsMatrix.h
    sdstructure/tree/balancedbinarytree.cpp
    sdstructure/tree/balancedbinarytree.h
    sdstructure/tree/binarySearchTree.cpp
    sdstructure/tree/binarySearchTree.h
    sdstructure/tree/binaryTree.cpp
    sdstructure/tree/binaryTree.h
    sdstructure/tree/commontree.cpp
    sdstructure/tree/commontree.h
    sdstructure/tree/forest.h
    sdstructure/tree/huffmantree.cpp
    sdstructure/tree/huffmantree.h
    sdstructure/tree/redblacktree.cpp
    sdstructure/tree/redblacktree.h
    sdstructure/tree/tree.cpp
    sdstructure/tree/tree.h
    sdstructure/const.h
    sdstructure/node.h
    sdstructure/null.h
        )
